--- a/tg_downloader.service
+++ b/tg_downloader.service
@@ -2,11 +2,11 @@
 Description=tg-downloader daemon
 
 [Service]
-Environment=tg_api_hash=abc
+Environment=tg_api_hash=abc zip_passwd=pcs
 WorkingDirectory=/root/tg_downloader
 ExecStart=/usr/bin/python3 ./main.py
 Restart=on-failure
-RestartSec=20s
+RestartSec=10s
 
 [Install]
 WantedBy=multi-user.target
